<project xmlns="http://maven.apache.org/POM/4.0.0"><modelVersion>4.0.0</modelVersion><parent><groupId>dev.jvmd</groupId><artifactId>jvmd</artifactId><version>0.1.0-SNAPSHOT</version></parent><artifactId>jvmd-analyzer</artifactId><dependencies><dependency><groupId>dev.jvmd</groupId><artifactId>jvmd-core</artifactId><version>${project.version}</version></dependency><dependency><groupId>dev.jvmd</groupId><artifactId>jvmd-index</artifactId><version>${project.version}</version></dependency></dependencies><properties><maven.compiler.release></maven.compiler.release><maven.compiler.source>25</maven.compiler.source><maven.compiler.target>25</maven.compiler.target></properties><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><compilerArgs><arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=dev.jvmd.analyzer</arg><arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=dev.jvmd.analyzer</arg><arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=dev.jvmd.analyzer</arg><arg>--add-exports=jdk.compiler/com.sun.tools.javac.comp=dev.jvmd.analyzer</arg><arg>--add-exports=jdk.compiler/com.sun.tools.javac.main=dev.jvmd.analyzer</arg><arg>--add-exports=jdk.compiler/com.sun.tools.javac.platform=dev.jvmd.analyzer</arg></compilerArgs></configuration></plugin></plugins></build></project>
